devops/gitlab/gitlab-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab-ns
  labels:
    name: gitlab
spec:
  clusterIP: None
  selector:
    name: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: ssh
      port: 22
      targetPort: 22
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: gitlab-ns
spec:
  serviceName: gitlab
  replicas: 1
  selector:
    matchLabels:
      name: gitlab
  template:
    metadata:
      labels:
        name: gitlab
    spec:
      containers:
        - name: gitlab
          image: shixiaochuangk8s/gitlab-ce:18.8.4-ce.0
          ports:
            - name: http
              containerPort: 80
            - name: ssh
              containerPort: 22
          volumeMounts:
            - mountPath: /var/opt/gitlab
              name: gitlab-data
            - mountPath: /etc/gitlab
              name: gitlab-config
            - mountPath: /var/log/gitlab
              name: gitlab-logs
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
  volumeClaimTemplates:
    - metadata:
        name: gitlab-data
      spec:
        storageClassName: "rook-ceph-block"
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 200Gi
    - metadata:
        name: gitlab-config
      spec:
        storageClassName: "rook-ceph-block"
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: gitlab-logs
      spec:
        storageClassName: "rook-ceph-block"
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
