devops/gitlab/gitlab-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab-ns
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: eip-pool
spec:
  type: LoadBalancer
  selector:
    name: gitlab
  ports:
    - name: ssh
      port: 22
      targetPort: 22
