devops/gitlab/gitlab-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-web
  namespace: gitlab-ns
spec:
  selector:
    name: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab-ns
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab.shixiaochuang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-web
                port:
                  number: 80
