devops/gitlab/gitlab-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-web
  namespace: gitlab-ns
spec:
  selector:
    name: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitlab.shixiaochuang.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gitlab-web
          port: 80
